--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -46,7 +46,7 @@ html,
   -o-tab-size: 4;
      tab-size: 4;
   /* 3 */
-  font-family: 8bit-bold, sans-serif;
+  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   /* 4 */
   font-feature-settings: normal;
   /* 5 */
@@ -633,12 +633,28 @@ video {
   bottom: 0px;
 }
 
+.bottom-poke-guess {
+  bottom: 200px;
+}
+
+.left-0 {
+  left: 0px;
+}
+
 .left-200px {
   left: 200px;
 }
 
 .start-0 {
   inset-inline-start: 0px;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.bottom-\[150px\] {
+  bottom: 150px;
 }
 
 .z-0 {
@@ -658,9 +674,19 @@ video {
   margin-right: 0.5rem;
 }
 
+.mx-3 {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .mb-0 {
@@ -671,8 +697,12 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .mb-poke-guess {
-  margin-bottom: 150px;
+  margin-bottom: 200px;
 }
 
 .me-1 {
@@ -697,6 +727,10 @@ video {
 
 .mt-4 {
   margin-top: 1rem;
+}
+
+.mt-poke-guess {
+  margin-top: 200px;
 }
 
 .block {
@@ -731,6 +765,41 @@ video {
   display: none;
 }
 
+.size-10 {
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.size-16 {
+  width: 4rem;
+  height: 4rem;
+}
+
+.size-24 {
+  width: 6rem;
+  height: 6rem;
+}
+
+.size-full {
+  width: 100%;
+  height: 100%;
+}
+
+.size-poke-guess {
+  width: 200px;
+  height: 200px;
+}
+
+.size-poke-guess-border {
+  width: 250px;
+  height: 250px;
+}
+
+.size-poke-guess-frame {
+  width: 300px;
+  height: 300px;
+}
+
 .h-10 {
   height: 2.5rem;
 }
@@ -749,6 +818,22 @@ video {
 
 .h-auto {
   height: auto;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.h-poke-guess {
+  height: 200px;
+}
+
+.h-poke-guess-border {
+  height: 250px;
+}
+
+.h-poke-guess-frame {
+  height: 300px;
 }
 
 .max-h-12 {
@@ -771,8 +856,8 @@ video {
   width: 50px;
 }
 
-.w-\[800px\] {
-  width: 800px;
+.w-\[80\%\] {
+  width: 80%;
 }
 
 .w-auto {
@@ -785,6 +870,18 @@ video {
 
 .w-inherit {
   width: inherit;
+}
+
+.w-poke-guess {
+  width: 200px;
+}
+
+.w-poke-guess-border {
+  width: 250px;
+}
+
+.w-poke-guess-frame {
+  width: 300px;
 }
 
 .max-w-12 {
@@ -835,8 +932,20 @@ video {
   flex-wrap: wrap;
 }
 
+.items-start {
+  align-items: flex-start;
+}
+
 .items-center {
   align-items: center;
+}
+
+.items-baseline {
+  align-items: baseline;
+}
+
+.items-stretch {
+  align-items: stretch;
 }
 
 .justify-center {
@@ -897,6 +1006,10 @@ video {
   border-radius: 0.25rem;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
 }
@@ -922,6 +1035,19 @@ video {
   border-width: 0px;
 }
 
+.border-2 {
+  border-width: 2px;
+}
+
+.border-solid {
+  border-style: solid;
+}
+
+.border-blue-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(59 130 246 / var(--tw-border-opacity));
+}
+
 .border-gray-100 {
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
@@ -945,6 +1071,41 @@ video {
 .border-gray-700 {
   --tw-border-opacity: 1;
   border-color: rgb(55 65 81 / var(--tw-border-opacity));
+}
+
+.border-green-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(134 239 172 / var(--tw-border-opacity));
+}
+
+.border-green-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(34 197 94 / var(--tw-border-opacity));
+}
+
+.border-purple-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(168 85 247 / var(--tw-border-opacity));
+}
+
+.border-red-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity));
+}
+
+.border-sky-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(14 165 233 / var(--tw-border-opacity));
+}
+
+.border-yellow-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(234 179 8 / var(--tw-border-opacity));
+}
+
+.bg-\[\#ff9c54\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 156 84 / var(--tw-bg-opacity));
 }
 
 .bg-blue-500 {
@@ -1075,6 +1236,11 @@ video {
   padding-right: 1.25rem;
 }
 
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1097,12 +1263,12 @@ video {
   text-align: center;
 }
 
-.font-8bit {
-  font-family: Press Start 2P, sans-serif;
+.font-8bit-bold {
+  font-family: 8bit-bold, ui-sans-serif;
 }
 
 .font-sans {
-  font-family: 8bit-bold, sans-serif;
+  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 .text-2xl {
@@ -1123,6 +1289,11 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -1206,21 +1377,7 @@ video {
 @font-face {
   font-family: "8bit-bold";
 
-  src: url("/frontend/src/assets/fonts/8bit-bold.woff2"),local("/frontend/src/assets/fonts/8bit-bold.woff2"),format("woff2");
-
-  font-weight: normal;
-
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "8bit";
-
-  src: url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap'), local("/frontend/src/assets/fonts/8bit.ttf"),format("truetype");
-
-  font-weight: normal;
-
-  font-style: normal;
+  src: url("/assets/fonts/8bit-bold.woff2") format("woff2");
 }
 
 .menu-icons{
@@ -1270,8 +1427,17 @@ video {
   /* Adjust as needed */
 }
 
+.guess-images{
+  width: auto;
+  height: "poke-guess";
+}
+
 .hover\:z-10:hover {
   z-index: 10;
+}
+
+.hover\:cursor-pointer:hover {
+  cursor: pointer;
 }
 
 .hover\:bg-gradient-to-bl:hover {
