--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -628,9 +628,21 @@ video {
   position: sticky;
 }
 
+.inset-0 {
+  inset: 0px;
+}
+
 .inset-y-0 {
   top: 0px;
   bottom: 0px;
+}
+
+.bottom-10 {
+  bottom: 2.5rem;
+}
+
+.bottom-\[100px\] {
+  bottom: 100px;
 }
 
 .bottom-poke-guess {
@@ -645,6 +657,10 @@ video {
   left: 200px;
 }
 
+.left-\[100px\] {
+  left: 100px;
+}
+
 .start-0 {
   inset-inline-start: 0px;
 }
@@ -653,8 +669,40 @@ video {
   top: 0px;
 }
 
-.bottom-\[150px\] {
-  bottom: 150px;
+.top-10 {
+  top: 2.5rem;
+}
+
+.top-poke-guess {
+  top: 200px;
+}
+
+.top-\[50px\] {
+  top: 50px;
+}
+
+.top-\[100px\] {
+  top: 100px;
+}
+
+.top-\[80px\] {
+  top: 80px;
+}
+
+.top-\[\] {
+  top: ;
+}
+
+.top-\[150px\] {
+  top: 150px;
+}
+
+.left-\[80px\] {
+  left: 80px;
+}
+
+.left-\[75px\] {
+  left: 75px;
 }
 
 .z-0 {
@@ -790,14 +838,24 @@ video {
   height: 200px;
 }
 
-.size-poke-guess-border {
+.size-poke-guess-frame {
   width: 250px;
   height: 250px;
 }
 
-.size-poke-guess-frame {
+.size-poke-guess-header {
   width: 300px;
   height: 300px;
+}
+
+.size-\[100px\] {
+  width: 100px;
+  height: 100px;
+}
+
+.size-\[150px\] {
+  width: 150px;
+  height: 150px;
 }
 
 .h-10 {
@@ -828,12 +886,20 @@ video {
   height: 200px;
 }
 
-.h-poke-guess-border {
+.h-poke-guess-frame {
   height: 250px;
 }
 
-.h-poke-guess-frame {
-  height: 300px;
+.h-\[100px\] {
+  height: 100px;
+}
+
+.h-\[200px\] {
+  height: 200px;
+}
+
+.h-\[150px\] {
+  height: 150px;
 }
 
 .max-h-12 {
@@ -876,12 +942,16 @@ video {
   width: 200px;
 }
 
-.w-poke-guess-border {
+.w-poke-guess-frame {
   width: 250px;
 }
 
-.w-poke-guess-frame {
-  width: 300px;
+.w-\[200px\] {
+  width: 200px;
+}
+
+.w-\[100px\] {
+  width: 100px;
 }
 
 .max-w-12 {
@@ -996,6 +1066,10 @@ video {
 
 .self-center {
   align-self: center;
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .whitespace-nowrap {
@@ -1195,14 +1269,63 @@ video {
   background-image: linear-gradient(to bottom right, #ED4264, #FFEDBC);
 }
 
+.bg-gradient-to-b {
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-t {
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
 .from-green-500 {
   --tw-gradient-from: #22c55e var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(34 197 94 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.from-white {
+  --tw-gradient-from: #fff var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-transparent {
+  --tw-gradient-from: transparent var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-blue-500 {
+  --tw-gradient-from: #3b82f6 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(59 130 246 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#ff9c54\] {
+  --tw-gradient-from: #ff9c54 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(255 156 84 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.via-white {
+  --tw-gradient-to: rgb(255 255 255 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), #fff var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+
 .to-orange-400 {
   --tw-gradient-to: #fb923c var(--tw-gradient-to-position);
+}
+
+.to-transparent {
+  --tw-gradient-to: transparent var(--tw-gradient-to-position);
+}
+
+.to-white {
+  --tw-gradient-to: #fff var(--tw-gradient-to-position);
 }
 
 .object-cover {
@@ -1340,6 +1463,10 @@ video {
 
 .underline {
   text-decoration-line: underline;
+}
+
+.opacity-100 {
+  opacity: 1;
 }
 
 .shadow {
