--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -689,6 +689,30 @@ video {
   top: 20%;
 }
 
+.top-\[50\%\] {
+  top: 50%;
+}
+
+.bottom-\[70\%\] {
+  bottom: 70%;
+}
+
+.bottom-\[60\%\] {
+  bottom: 60%;
+}
+
+.bottom-\[45\%\] {
+  bottom: 45%;
+}
+
+.top-\[60\%\] {
+  top: 60%;
+}
+
+.top-\[55\%\] {
+  top: 55%;
+}
+
 .z-0 {
   z-index: 0;
 }
