--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -661,12 +661,32 @@ video {
   left: 0.25rem;
 }
 
+.left-10px {
+  left: 2px;
+}
+
 .left-2 {
   left: 0.5rem;
 }
 
 .left-200px {
   left: 200px;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.right-1 {
+  right: 0.25rem;
+}
+
+.right-10px {
+  right: 2px;
+}
+
+.right-2 {
+  right: 0.5rem;
 }
 
 .start-0 {
@@ -689,6 +709,34 @@ video {
   top: 200px;
 }
 
+.bottom-\[50\%\] {
+  bottom: 50%;
+}
+
+.bottom-\[40\%\] {
+  bottom: 40%;
+}
+
+.bottom-\[20\%\] {
+  bottom: 20%;
+}
+
+.top-\[50px\] {
+  top: 50px;
+}
+
+.bottom-\[50px\] {
+  bottom: 50px;
+}
+
+.bottom-\[60px\] {
+  bottom: 60px;
+}
+
+.bottom-\[70px\] {
+  bottom: 70px;
+}
+
 .z-0 {
   z-index: 0;
 }
@@ -703,6 +751,10 @@ video {
 
 .z-30 {
   z-index: 30;
+}
+
+.z-50 {
+  z-index: 50;
 }
 
 .order-1 {
@@ -779,6 +831,18 @@ video {
 
 .mt-poke-guess-header {
   margin-top: 300px;
+}
+
+.-mb-\[-60px\] {
+  margin-bottom: 60px;
+}
+
+.-mb-\[60px\] {
+  margin-bottom: -60px;
+}
+
+.-mb-\[50px\] {
+  margin-bottom: -50px;
 }
 
 .block {
@@ -858,6 +922,11 @@ video {
   height: 300px;
 }
 
+.size-\[100\%\] {
+  width: 100%;
+  height: 100%;
+}
+
 .h-10 {
   height: 2.5rem;
 }
@@ -886,6 +955,10 @@ video {
   height: 55%;
 }
 
+.h-\[60\%\] {
+  height: 60%;
+}
+
 .h-auto {
   height: auto;
 }
@@ -900,6 +973,46 @@ video {
 
 .h-poke-guess-frame {
   height: 250px;
+}
+
+.h-\[130\%\] {
+  height: 130%;
+}
+
+.h-\[1024px\] {
+  height: 1024px;
+}
+
+.h-\[600px\] {
+  height: 600px;
+}
+
+.h-\[2000px\] {
+  height: 2000px;
+}
+
+.h-\[1000px\] {
+  height: 1000px;
+}
+
+.h-\[800px\] {
+  height: 800px;
+}
+
+.h-\[900px\] {
+  height: 900px;
+}
+
+.h-\[200\%\] {
+  height: 200%;
+}
+
+.h-\[300\%\] {
+  height: 300%;
+}
+
+.h-\[400\%\] {
+  height: 400%;
 }
 
 .max-h-12 {
@@ -920,10 +1033,6 @@ video {
 
 .w-\[100\%\] {
   width: 100%;
-}
-
-.w-\[110\%\] {
-  width: 110%;
 }
 
 .w-\[50px\] {
@@ -956,6 +1065,30 @@ video {
 
 .w-poke-guess-frame {
   width: 250px;
+}
+
+.w-poke-guess-header {
+  width: 300px;
+}
+
+.w-poke-viewer-holder {
+  width: 254px;
+}
+
+.w-\[120\%\] {
+  width: 120%;
+}
+
+.w-\[1024px\] {
+  width: 1024px;
+}
+
+.w-\[90\%\] {
+  width: 90%;
+}
+
+.w-\[95\%\] {
+  width: 95%;
 }
 
 .max-w-12 {
@@ -1208,6 +1341,11 @@ video {
   border-color: rgb(234 179 8 / var(--tw-border-opacity));
 }
 
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -1285,6 +1423,21 @@ video {
 .bg-yellow-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(234 179 8 / var(--tw-bg-opacity));
+}
+
+.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}
+
+.bg-green-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}
+
+.bg-orange-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 146 60 / var(--tw-bg-opacity));
 }
 
 .bg-artistic-conic {
@@ -1409,9 +1562,9 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.py-2\.5 {
-  padding-top: 0.625rem;
-  padding-bottom: 0.625rem;
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .pb-3 {
@@ -1428,6 +1581,18 @@ video {
 
 .ps-3 {
   padding-inline-start: 0.75rem;
+}
+
+.pt-\[50px\] {
+  padding-top: 50px;
+}
+
+.pt-\[60px\] {
+  padding-top: 60px;
+}
+
+.pt-\[70px\] {
+  padding-top: 70px;
 }
 
 .text-center {
@@ -1613,11 +1778,6 @@ video {
 
 .hover\:cursor-pointer:hover {
   cursor: pointer;
-}
-
-.hover\:bg-slate-600:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
 }
 
 .hover\:shadow-lg:hover {
