--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -641,16 +641,16 @@ video {
   bottom: 2.5rem;
 }
 
-.bottom-\[10\%\] {
-  bottom: 10%;
-}
-
-.bottom-\[30\%\] {
-  bottom: 30%;
+.bottom-\[60px\] {
+  bottom: 60px;
 }
 
 .bottom-poke-guess {
   bottom: 200px;
+}
+
+.bottom-poke-viewer {
+  bottom: 250px;
 }
 
 .left-0 {
@@ -701,40 +701,24 @@ video {
   top: 2.5rem;
 }
 
-.top-\[45\%\] {
-  top: 45%;
+.top-\[10\%\] {
+  top: 10%;
 }
 
 .top-poke-guess {
   top: 200px;
 }
 
-.bottom-\[50\%\] {
-  bottom: 50%;
+.top-poke-viewer {
+  top: 250px;
 }
 
-.bottom-\[40\%\] {
-  bottom: 40%;
+.-z-10 {
+  z-index: -10;
 }
 
-.bottom-\[20\%\] {
-  bottom: 20%;
-}
-
-.top-\[50px\] {
-  top: 50px;
-}
-
-.bottom-\[50px\] {
-  bottom: 50px;
-}
-
-.bottom-\[60px\] {
-  bottom: 60px;
-}
-
-.bottom-\[70px\] {
-  bottom: 70px;
+.-z-20 {
+  z-index: -20;
 }
 
 .z-0 {
@@ -765,6 +749,11 @@ video {
   order: 2;
 }
 
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
@@ -780,9 +769,28 @@ video {
   margin-right: auto;
 }
 
+.my-1 {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+}
+
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
+}
+
+.-mb-\[50px\] {
+  margin-bottom: -50px;
 }
 
 .mb-0 {
@@ -817,6 +825,14 @@ video {
   margin-top: 0px;
 }
 
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
 .mt-3 {
   margin-top: 0.75rem;
 }
@@ -825,24 +841,16 @@ video {
   margin-top: 1rem;
 }
 
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
 .mt-poke-guess {
   margin-top: 200px;
 }
 
 .mt-poke-guess-header {
   margin-top: 300px;
-}
-
-.-mb-\[-60px\] {
-  margin-bottom: 60px;
-}
-
-.-mb-\[60px\] {
-  margin-bottom: -60px;
-}
-
-.-mb-\[50px\] {
-  margin-bottom: -50px;
 }
 
 .block {
@@ -922,13 +930,16 @@ video {
   height: 300px;
 }
 
-.size-\[100\%\] {
-  width: 100%;
-  height: 100%;
-}
-
 .h-10 {
   height: 2.5rem;
+}
+
+.h-20 {
+  height: 5rem;
+}
+
+.h-24 {
+  height: 6rem;
 }
 
 .h-4 {
@@ -945,14 +956,6 @@ video {
 
 .h-\[100vh\] {
   height: 100vh;
-}
-
-.h-\[120\%\] {
-  height: 120%;
-}
-
-.h-\[55\%\] {
-  height: 55%;
 }
 
 .h-\[60\%\] {
@@ -975,44 +978,8 @@ video {
   height: 250px;
 }
 
-.h-\[130\%\] {
-  height: 130%;
-}
-
-.h-\[1024px\] {
-  height: 1024px;
-}
-
-.h-\[600px\] {
-  height: 600px;
-}
-
-.h-\[2000px\] {
-  height: 2000px;
-}
-
-.h-\[1000px\] {
-  height: 1000px;
-}
-
-.h-\[800px\] {
-  height: 800px;
-}
-
-.h-\[900px\] {
-  height: 900px;
-}
-
-.h-\[200\%\] {
-  height: 200%;
-}
-
-.h-\[300\%\] {
-  height: 300%;
-}
-
-.h-\[400\%\] {
-  height: 400%;
+.h-poke-viewer {
+  height: 250px;
 }
 
 .max-h-12 {
@@ -1047,6 +1014,14 @@ video {
   width: 80%;
 }
 
+.w-\[95\%\] {
+  width: 95%;
+}
+
+.w-\[98\%\] {
+  width: 98%;
+}
+
 .w-auto {
   width: auto;
 }
@@ -1071,24 +1046,8 @@ video {
   width: 300px;
 }
 
-.w-poke-viewer-holder {
-  width: 254px;
-}
-
-.w-\[120\%\] {
-  width: 120%;
-}
-
-.w-\[1024px\] {
-  width: 1024px;
-}
-
-.w-\[90\%\] {
-  width: 90%;
-}
-
-.w-\[95\%\] {
-  width: 95%;
+.w-poke-viewer {
+  width: 250px;
 }
 
 .max-w-12 {
@@ -1246,6 +1205,10 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
 .rounded-xl {
   border-radius: 0.75rem;
 }
@@ -1321,6 +1284,11 @@ video {
   border-color: rgb(34 197 94 / var(--tw-border-opacity));
 }
 
+.border-green-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(22 163 74 / var(--tw-border-opacity));
+}
+
 .border-purple-500 {
   --tw-border-opacity: 1;
   border-color: rgb(168 85 247 / var(--tw-border-opacity));
@@ -1336,14 +1304,14 @@ video {
   border-color: rgb(14 165 233 / var(--tw-border-opacity));
 }
 
-.border-yellow-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(234 179 8 / var(--tw-border-opacity));
-}
-
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.border-yellow-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(234 179 8 / var(--tw-border-opacity));
 }
 
 .bg-black {
@@ -1359,6 +1327,11 @@ video {
 .bg-blue-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+}
+
+.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
 
 .bg-gray-50 {
@@ -1401,6 +1374,16 @@ video {
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
 }
 
+.bg-green-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}
+
+.bg-orange-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 146 60 / var(--tw-bg-opacity));
+}
+
 .bg-red-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(248 113 113 / var(--tw-bg-opacity));
@@ -1409,6 +1392,11 @@ video {
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-red-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(127 29 29 / var(--tw-bg-opacity));
 }
 
 .bg-transparent {
@@ -1423,21 +1411,6 @@ video {
 .bg-yellow-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(234 179 8 / var(--tw-bg-opacity));
-}
-
-.bg-gray-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
-}
-
-.bg-green-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
-}
-
-.bg-orange-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(251 146 60 / var(--tw-bg-opacity));
 }
 
 .bg-artistic-conic {
@@ -1542,6 +1515,16 @@ video {
   padding: 1rem;
 }
 
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -1562,9 +1545,9 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .pb-3 {
@@ -1583,16 +1566,12 @@ video {
   padding-inline-start: 0.75rem;
 }
 
+.pt-6 {
+  padding-top: 1.5rem;
+}
+
 .pt-\[50px\] {
   padding-top: 50px;
-}
-
-.pt-\[60px\] {
-  padding-top: 60px;
-}
-
-.pt-\[70px\] {
-  padding-top: 70px;
 }
 
 .text-center {
@@ -1601,6 +1580,10 @@ video {
 
 .font-8bit-bold {
   font-family: 8bit-bold, ui-sans-serif;
+}
+
+.font-mono {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 .font-sans {
