--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -737,6 +737,10 @@ video {
   top: 15%;
 }
 
+.bottom-\[-10px\] {
+  bottom: -10px;
+}
+
 .-z-10 {
   z-index: -10;
 }
@@ -895,6 +899,10 @@ video {
 
 .block {
   display: block;
+}
+
+.inline-block {
+  display: inline-block;
 }
 
 .inline {
@@ -1078,6 +1086,14 @@ video {
   height: 0.5rem;
 }
 
+.h-\[20px\] {
+  height: 20px;
+}
+
+.h-3 {
+  height: 0.75rem;
+}
+
 .max-h-12 {
   max-height: 3rem;
 }
@@ -1156,6 +1172,14 @@ video {
 
 .w-\[100px\] {
   width: 100px;
+}
+
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-3 {
+  width: 0.75rem;
 }
 
 .max-w-12 {
@@ -1241,6 +1265,10 @@ video {
 
 .items-stretch {
   align-items: stretch;
+}
+
+.justify-end {
+  justify-content: flex-end;
 }
 
 .justify-center {
@@ -1357,6 +1385,16 @@ video {
 .rounded-t-2xl {
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
+}
+
+.rounded-l-full {
+  border-top-left-radius: 9999px;
+  border-bottom-left-radius: 9999px;
+}
+
+.rounded-r-full {
+  border-top-right-radius: 9999px;
+  border-bottom-right-radius: 9999px;
 }
 
 .border {
@@ -1563,6 +1601,11 @@ video {
   background-color: rgb(234 179 8 / var(--tw-bg-opacity));
 }
 
+.bg-pink-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(236 72 153 / var(--tw-bg-opacity));
+}
+
 .bg-artistic-conic {
   background-image: conic-gradient(from 180deg, #22223b, #4a4e69, #9a8c98, #c9ada7, #f2e9e4);
 }
@@ -1748,6 +1791,14 @@ video {
 
 .pt-\[50px\] {
   padding-top: 50px;
+}
+
+.pr-2 {
+  padding-right: 0.5rem;
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem;
 }
 
 .text-center {
